# hop-and-barley-shop

./: .gitignore  Dockerfile  README.md  compose.yaml  conftest.py  git  pyproject.toml  tailwind.config.js  test_logic.py
api/: serializers.py  urls.py
core/: settings.py  urls.py
hop_barley/: schema.py
orders/: admin.py  api_views.py  cart.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: admin.py  api_views.py  models.py  serializers.py  tests.py  translation.py  urls.py  views.py
products/fixtures/: categories.json  products.json  review.json
products/migrations/: 0001_initial.py  0002_category_is_active.py  0003_alter_category_options_alter_product_options_and_more.py  0004_category_description_en_category_description_ru_and_more.py  0005_alter_category_options_remove_category_description_and_more.py
reviews/: admin.py  models.py  tests.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_remove_review_comment_review_comment_en_and_more.py
static/css/: main.css
static/js/: main.js
templates/: account.html  base.html  cart.html  checkout.html  guides-recipes.html  home.html  login.html  product-caramel-malt.html  product-cascade-hops.html  product-centennial-hops.html  product-citra-hops.html  product-imperial-yeast.html  product-maris-otter-malt.html  product-mosaic-hops.html  product-pilsner-malt.html  product-saaz-hops.html  product-safale-us05-yeast.html  product-unmalted-wheat.html  product-west-coast-ipa-kit.html  register.html
templates/orders/: created.html
templates/products/: product_detail.html  product_list.html
templates/static_html/: product-caramel-malt.html  product-cascade-hops.html  product-centennial-hops.html  product-citra-hops.html  product-imperial-yeast.html  product-maris-otter-malt.html  product-mosaic-hops.html  product-pilsner-malt.html  product-saaz-hops.html  product-safale-us05-yeast.html  product-unmalted-wheat.html  product-west-coast-ipa-kit.html
users/: admin.py  api_views.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_staff.py  (+1 more)
(+5 files in other folders)
