[project]
name = "myshop"
version = "0.1.0"
description = ""
authors = [
    {name = "Mihhail327",email = "mixa-amr@hotmail.com"}
]
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-environ (>=0.13.0,<0.14.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-debug-toolbar (>=6.3.0,<7.0.0)",
    "dj-database-url (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
